started fixing the html svgs
Reminder to self NOT to smush the svgs after putting through svgomg,
the website makes small enough as it is and smush will wreck indents

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="grid">
       <div class="xs-1">
-        <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" viewBox="0 0 792 143">
+        <svg xmlns="http://www.w3.org/2000/svg" id="layer-1" viewBox="0 0 792 143">
           <g fill="#143736">
             <path d="M10.7 15.8h3l7.2 25.5h.1l7-25.5h2.7l7 25.5h.1L45 15.8h3l-8.4 29.3h-3.7l-6.5-24h-.1l-6.4 24h-3.8l-8.4-29.3z"/>
             <path d="M57.5 22.9c6.4 0 11.4 5.4 11.4 11.4 0 5.9-4.9 11.4-11.4 11.4-6.3 0-11.3-5.3-11.3-11.2 0-6.9 5.6-11.6 11.3-11.6zm0 20.2c4.2 0 8.5-3.3 8.5-9s-4.8-8.7-8.5-8.7c-4 0-8.5 3.2-8.5 9 0 5 4.1 8.7 8.5 8.7z"/>
@@ -46,7 +46,7 @@
     </div>
   </header>
 
-<!INFOGRAPHICS>
+<!-- INFOGRAPHIC START -->
 
   <main>
     <div class="grid">
@@ -118,7 +118,7 @@
                 <path d="M192.3 192.7v9.7c0 5.7-4.2 7-6.5 7-2.4 0-4.9-1.3-6-3.9h3.3c1.1 1.3 2.5 1.3 2.9 1.3 1.6 0 3.5-1.1 3.6-3.7-.4.5-1.5 1.9-3.9 1.9-2.9 0-6.1-2.5-6.1-6.4 0-3.7 3-6.2 6.1-6.2 2.4 0 3.5 1.4 3.8 1.9v-1.5h2.8zm-6.4 2.2c-1.7 0-3.5 1.4-3.5 3.6 0 2.4 1.8 3.8 3.6 3.8 1.7 0 3.4-1.5 3.4-3.8 0-1.6-1.4-3.6-3.5-3.6z"/>
               </g>
             </g>
-            <g id="black-beans_1_">
+            <g id="black-beans-1">
               <circle id="black-beans" cx="288.5" cy="174.6" r="39" fill="#F6F9EE"/>
               <g fill="#006D53">
                 <path d="M232.9 217.5h1.6v2.8c.5-.5 1.3-.8 2-.8 2 0 3.3 1.7 3.3 3.5 0 1.3-.9 3.5-3.2 3.5-1.3 0-1.8-.6-2.2-1v.8H233v-8.8zm3.4 7.5c1 0 1.9-.8 1.9-2.1s-.9-2-1.9-2c-1.2 0-1.9 1-1.9 2 0 1.4 1 2.1 1.9 2.1z"/>
@@ -149,7 +149,7 @@
                 <path d="M281.1 189.4h7.2v2.7h-5l-.5 2.9c.6-.3 1.3-.4 2-.4 3 0 5 2.7 5 5.5 0 2.9-2.3 5.5-5.5 5.5-2.8 0-5.3-2.3-5.4-5h2.8c.3 1.8 1.6 2.3 2.5 2.3 1.8 0 2.7-1.5 2.7-2.8 0-1.3-1-2.8-2.7-2.8-1.2 0-1.8.7-2.1 1.1l-2.5-.7 1.5-8.3z"/>
                 <path d="M303.3 193.4v9.7c0 5.7-4.2 7-6.5 7-2.4 0-4.9-1.3-6-3.9h3.3c1.1 1.3 2.5 1.3 2.9 1.3 1.6 0 3.5-1.1 3.6-3.7-.4.5-1.5 1.9-3.9 1.9-2.9 0-6.1-2.5-6.1-6.4 0-3.7 3-6.2 6.1-6.2 2.4 0 3.5 1.4 3.8 1.9v-1.5h2.8zm-6.4 2.2c-1.7 0-3.5 1.4-3.5 3.6 0 2.4 1.8 3.8 3.6 3.8 1.7 0 3.4-1.5 3.4-3.8 0-1.7-1.4-3.6-3.5-3.6z"/>
               </g>
-              <path id="FvGQwl.tif_3_" fill="#143736" d="M271.5 181.4c-2-.6-4-1.3-5.7-2.5-2.5-1.7-4.1-4-4.9-6.9-.9-3.6-.4-6.9 1.7-9.9 1.8-2.7 4.3-4.4 7.6-5.1 2.1-.4 4.1-.2 6.2.3 3.1.7 6.1.2 8.8-1.5 1.7-1 2.9-2.4 4-4 2-2.9 4.8-4.6 8.3-5 3.6-.5 6.7.5 9.5 2.8 3.9 3.3 5.2 8.6 3.6 13.3-.8 2.2-1.9 4.1-3.3 5.9-1.4 1.9-3 3.5-4.7 5.1-2.1 1.8-4.4 3.4-6.8 4.6-2.6 1.4-5.3 2.3-8.2 3-4.3 1-8.6 1.2-12.9.5-1.1-.1-2.1-.4-3.2-.6zm3.4-18.9c.3.1.7.2 1.1.2 2 .4 4.1.5 6.1.1 2.1-.3 4-1 5.8-2.2 1.8-1.2 3.4-2.7 4.7-4.5.3-.4.2-1-.2-1.3-.4-.3-.9-.3-1.3.1-.2.2-.3.4-.5.6-1.3 1.6-2.8 3-4.6 3.9-2.6 1.4-5.4 1.8-8.4 1.5-1-.1-2-.4-3-.5-.5-.1-1 .3-1.1.7-.1.5.2 1 .7 1.1.2.2.4.2.7.3z"/>
+              <path id="fvgqwl.tif-3" fill="#143736" d="M271.5 181.4c-2-.6-4-1.3-5.7-2.5-2.5-1.7-4.1-4-4.9-6.9-.9-3.6-.4-6.9 1.7-9.9 1.8-2.7 4.3-4.4 7.6-5.1 2.1-.4 4.1-.2 6.2.3 3.1.7 6.1.2 8.8-1.5 1.7-1 2.9-2.4 4-4 2-2.9 4.8-4.6 8.3-5 3.6-.5 6.7.5 9.5 2.8 3.9 3.3 5.2 8.6 3.6 13.3-.8 2.2-1.9 4.1-3.3 5.9-1.4 1.9-3 3.5-4.7 5.1-2.1 1.8-4.4 3.4-6.8 4.6-2.6 1.4-5.3 2.3-8.2 3-4.3 1-8.6 1.2-12.9.5-1.1-.1-2.1-.4-3.2-.6zm3.4-18.9c.3.1.7.2 1.1.2 2 .4 4.1.5 6.1.1 2.1-.3 4-1 5.8-2.2 1.8-1.2 3.4-2.7 4.7-4.5.3-.4.2-1-.2-1.3-.4-.3-.9-.3-1.3.1-.2.2-.3.4-.5.6-1.3 1.6-2.8 3-4.6 3.9-2.6 1.4-5.4 1.8-8.4 1.5-1-.1-2-.4-3-.5-.5-.1-1 .3-1.1.7-.1.5.2 1 .7 1.1.2.2.4.2.7.3z"/>
               <path fill="#006D53" d="M274.2 162.4c6.3 2.2 15.4-.3 18.8-6.3.7-1.3-1.7-2.5-2.4-1.4-3 4.3-10.3 6.8-15.9 5.4-1.4-.3-2.1 1.7-.5 2.3z"/>
             </g>
             <g id="female">
