--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <path d="M281.1 189.4h7.2v2.7h-5l-.5 2.9c.6-.3 1.3-.4 2-.4 3 0 5 2.7 5 5.5 0 2.9-2.3 5.5-5.5 5.5-2.8 0-5.3-2.3-5.4-5h2.8c.3 1.8 1.6 2.3 2.5 2.3 1.8 0 2.7-1.5 2.7-2.8 0-1.3-1-2.8-2.7-2.8-1.2 0-1.8.7-2.1 1.1l-2.5-.7 1.5-8.3z"/>
                 <path d="M303.3 193.4v9.7c0 5.7-4.2 7-6.5 7-2.4 0-4.9-1.3-6-3.9h3.3c1.1 1.3 2.5 1.3 2.9 1.3 1.6 0 3.5-1.1 3.6-3.7-.4.5-1.5 1.9-3.9 1.9-2.9 0-6.1-2.5-6.1-6.4 0-3.7 3-6.2 6.1-6.2 2.4 0 3.5 1.4 3.8 1.9v-1.5h2.8zm-6.4 2.2c-1.7 0-3.5 1.4-3.5 3.6 0 2.4 1.8 3.8 3.6 3.8 1.7 0 3.4-1.5 3.4-3.8 0-1.7-1.4-3.6-3.5-3.6z"/>
               </g>
-              <path id="fvgqwl.tif-3" fill="#143736" d="M271.5 181.4c-2-.6-4-1.3-5.7-2.5-2.5-1.7-4.1-4-4.9-6.9-.9-3.6-.4-6.9 1.7-9.9 1.8-2.7 4.3-4.4 7.6-5.1 2.1-.4 4.1-.2 6.2.3 3.1.7 6.1.2 8.8-1.5 1.7-1 2.9-2.4 4-4 2-2.9 4.8-4.6 8.3-5 3.6-.5 6.7.5 9.5 2.8 3.9 3.3 5.2 8.6 3.6 13.3-.8 2.2-1.9 4.1-3.3 5.9-1.4 1.9-3 3.5-4.7 5.1-2.1 1.8-4.4 3.4-6.8 4.6-2.6 1.4-5.3 2.3-8.2 3-4.3 1-8.6 1.2-12.9.5-1.1-.1-2.1-.4-3.2-.6zm3.4-18.9c.3.1.7.2 1.1.2 2 .4 4.1.5 6.1.1 2.1-.3 4-1 5.8-2.2 1.8-1.2 3.4-2.7 4.7-4.5.3-.4.2-1-.2-1.3-.4-.3-.9-.3-1.3.1-.2.2-.3.4-.5.6-1.3 1.6-2.8 3-4.6 3.9-2.6 1.4-5.4 1.8-8.4 1.5-1-.1-2-.4-3-.5-.5-.1-1 .3-1.1.7-.1.5.2 1 .7 1.1.2.2.4.2.7.3z"/>
+              <path fill="#143736" d="M271.5 181.4c-2-.6-4-1.3-5.7-2.5-2.5-1.7-4.1-4-4.9-6.9-.9-3.6-.4-6.9 1.7-9.9 1.8-2.7 4.3-4.4 7.6-5.1 2.1-.4 4.1-.2 6.2.3 3.1.7 6.1.2 8.8-1.5 1.7-1 2.9-2.4 4-4 2-2.9 4.8-4.6 8.3-5 3.6-.5 6.7.5 9.5 2.8 3.9 3.3 5.2 8.6 3.6 13.3-.8 2.2-1.9 4.1-3.3 5.9-1.4 1.9-3 3.5-4.7 5.1-2.1 1.8-4.4 3.4-6.8 4.6-2.6 1.4-5.3 2.3-8.2 3-4.3 1-8.6 1.2-12.9.5-1.1-.1-2.1-.4-3.2-.6zm3.4-18.9c.3.1.7.2 1.1.2 2 .4 4.1.5 6.1.1 2.1-.3 4-1 5.8-2.2 1.8-1.2 3.4-2.7 4.7-4.5.3-.4.2-1-.2-1.3-.4-.3-.9-.3-1.3.1-.2.2-.3.4-.5.6-1.3 1.6-2.8 3-4.6 3.9-2.6 1.4-5.4 1.8-8.4 1.5-1-.1-2-.4-3-.5-.5-.1-1 .3-1.1.7-.1.5.2 1 .7 1.1.2.2.4.2.7.3z"/>
               <path fill="#006D53" d="M274.2 162.4c6.3 2.2 15.4-.3 18.8-6.3.7-1.3-1.7-2.5-2.4-1.4-3 4.3-10.3 6.8-15.9 5.4-1.4-.3-2.1 1.7-.5 2.3z"/>
             </g>
             <g id="female">
@@ -589,7 +589,7 @@
             </g>
           </g>
           <g id="kidney-beans">
-            <g id="FvGQwl.tif_1_">
+            <g>
               <path fill="#143736" d="M179.6 250.5c-3.3-.1-6.6-.4-9.7-1.5-4.5-1.6-7.9-4.5-10.2-8.6-2.9-5-3.3-10.3-1.4-15.8 1.7-4.8 4.9-8.4 9.5-10.7 3-1.5 6.2-1.9 9.5-2 5-.2 9.4-2.1 12.9-5.8 2.1-2.2 3.5-4.8 4.6-7.7 1.9-5.2 5.5-8.9 10.6-11 5.2-2.1 10.4-1.9 15.5.5 7.3 3.4 11.4 11.1 10.8 18.8-.3 3.6-1.3 7-2.6 10.3-1.4 3.4-3.1 6.6-5.1 9.6-2.4 3.6-5.3 6.8-8.5 9.8-3.4 3.1-7.2 5.7-11.2 7.8-6.1 3.2-12.6 5.2-19.4 5.9-1.9.2-3.6.3-5.3.4zm-2.5-30.2c0 .1 0 .1 0 0 .6 0 1.1 0 1.7-.1 3.3-.2 6.4-.9 9.4-2.3 3-1.3 5.7-3.2 8-5.7 2.3-2.6 4.1-5.4 5.3-8.7.3-.7-.1-1.5-.8-1.8-.7-.3-1.6 0-1.9.7-.2.3-.3.7-.5 1-1.3 3-3 5.6-5.4 7.8-3.5 3.1-7.5 5-12.1 5.6-1.6.2-3.2.2-4.8.4-.8.1-1.4.8-1.3 1.6 0 .8.7 1.4 1.5 1.5.1.1.5 0 .9 0z"/>
               <path fill="#006D53" d="M176 220.5c10.5.9 23.3-6.6 26.1-17.2.6-2.3-3.5-3.1-4.3-1.1-2.8 7.8-13 14.5-22.1 14.6-2.1.1-2.4 3.5.3 3.7z"/>
             </g>
@@ -615,7 +615,7 @@
             </g>
           </g>
           <g id="swiss-chard">
-            <g id="FvGQwl.tif_4_">
+            <g>
               <path fill="#143736" d="M207.3 164.1c-7.4 0-14.5-1.5-21.3-4.4-4-1.7-7.7-3.8-10.7-7.1-2.7-3-4.2-6.6-4.7-10.6-1-8 3.5-16.6 12.1-19.9 5.1-2 10.3-1.8 15.3.7 2.8 1.4 5.7 2.1 8.8 2.1 5.1-.1 9.6-1.8 13.3-5.5 7.2-7.3 19-7.6 26.5-.8 7.2 6.6 8.3 17.5 2.6 25.4-4 5.5-9.1 9.6-14.9 13-6.5 3.7-13.5 5.9-21 6.8-2.1.1-4.1.2-6 .3zm-.6-30.6c5.7-.1 10.3-1.6 14.5-4.5 1-.7 2-1.5 3-2.4.7-.7.7-1.5.1-2.2-.5-.6-1.4-.6-2.1-.1-.3.2-.7.5-1 .8-3 2.5-6.4 4.2-10.2 4.9-4.2.7-8.2.3-12.2-1.2-1.1-.4-2.2-1-3.3-1.4-.9-.4-1.8 0-2.1.8-.3.9-.1 1.5.8 2 4.1 2.2 8.5 3.3 12.5 3.3z"/>
               <path fill="#006D53" d="M194 130.5c9.1 5.3 23.9 3.9 30.9-4.5 1.5-1.8-1.9-4.3-3.4-2.8-5.8 5.8-17.9 7.6-26.2 3.9-2-.9-3.6 2-1.3 3.4z"/>
             </g>
@@ -662,7 +662,7 @@
             </g>
           </g>
           <g id="chickpeas">
-            <g id="FvGQwl.tif_2_">
+            <g>
               <path fill="#143736" d="M294.4 149.3c-3.3-.1-6.6-.4-9.7-1.5-4.5-1.6-7.9-4.5-10.2-8.6-2.9-5-3.3-10.3-1.4-15.8 1.7-4.8 4.9-8.4 9.5-10.7 3-1.5 6.2-1.9 9.5-2 5-.2 9.4-2.1 12.9-5.8 2.1-2.2 3.5-4.8 4.6-7.7 1.9-5.2 5.5-8.9 10.6-11 5.2-2.1 10.4-1.9 15.5.5 7.3 3.4 11.4 11.1 10.8 18.8-.3 3.6-1.3 7-2.6 10.3-1.4 3.4-3.1 6.6-5.1 9.6-2.4 3.6-5.3 6.8-8.5 9.8-3.4 3.1-7.2 5.7-11.2 7.8-6.1 3.2-12.6 5.2-19.4 5.9-1.9.3-3.6.3-5.3.4zm-2.5-30.1c.6 0 1.1 0 1.7-.1 3.3-.2 6.4-.9 9.4-2.3 3-1.3 5.7-3.2 8-5.7 2.3-2.6 4.1-5.4 5.3-8.7.3-.7-.1-1.5-.8-1.8-.7-.3-1.6 0-1.9.7-.2.3-.3.7-.5 1-1.3 3-3 5.6-5.4 7.8-3.5 3.1-7.5 5-12.1 5.6-1.6.2-3.2.2-4.8.4-.8.1-1.4.8-1.3 1.6 0 .8.7 1.4 1.5 1.5h.9z"/>
               <path fill="#006D53" d="M291.1 119.6c10.5.9 23.2-6.7 26.1-17.3.6-2.3-3.6-3.1-4.3-1.1-2.8 7.8-12.9 14.6-22 14.7-2.3.1-2.5 3.5.2 3.7z"/>
             </g>
@@ -686,7 +686,7 @@
             </g>
           </g>
           <g id="soybeans">
-            <g id="_x3C_Group_x3E_">
+            <g>
               <path fill="#143736" d="M110.5 238.2c-4.9-.1-9.7-.7-14.5-2-4.2-1.2-8.2-2.8-12-4.9-3.8-2.1-7.3-4.6-10.1-8-2.4-2.8-3.7-6.1-4.1-9.8-.7-5.4.9-10.1 4.2-14.3 1.7-2.2 3.9-4 6.5-5.1 6.7-2.9 13.2-2.5 19.4 1.7 4.3 2.9 9.1 3.7 14.1 2.7 2.7-.5 5.3-1.6 7.6-3.4 3.1-2.5 6.8-3.9 10.9-4 5.9-.2 10.8 1.8 14.8 6 3.2 3.3 4.8 7.3 5.1 11.9.3 4.6-.9 8.6-3.6 12.3-2.3 3.1-5.1 5.6-8.3 7.7-3.6 2.5-7.5 4.3-11.5 5.9-4.7 1.8-9.5 2.8-14.5 3.1-1.3 0-2.7.1-4 .2zm.6-30.7c2.2.2 4.4-.6 6.7-1.2 2.5-.7 4.7-2 6.9-3.4.9-.6 1.1-1.4.6-2.1-.5-.8-1.3-.9-2.3-.5-.3.2-.6.3-.8.5-3 1.9-6.3 3.3-9.9 3.5-5.4.4-10.4-.8-14.9-3.9-.5-.3-1.1-.6-1.7-.9-.8-.3-1.6.1-1.9.8-.3.7-.1 1.5.7 1.9.3.1.5.3.8.5 4.7 3.3 9.8 4.9 15.8 4.8z"/>
               <path fill="#006D53" d="M94.1 202.7c8.2 6.7 22.9 7.2 31.4.2 1.9-1.5-.7-3.9-2.4-2.7-6.9 4.8-19.3 4.5-27.1-.6-1.9-1.2-4 1.4-1.9 3.1z"/>
             </g>
@@ -769,7 +769,7 @@
               <path d="M384 22.1c-.2-1.1-.9-1.1-1.3-1.1-.8 0-1.2.6-1.2 1.1 0 .8.5.9 2.2 1.5 1.6.5 3.7 1.3 3.7 4 0 3-2.4 4.6-4.6 4.6-1.3 0-2.9-.5-4-1.7-.8-1-.9-2.1-1-2.9h3.2c.1.6.4 1.7 1.7 1.7 1 0 1.4-.8 1.4-1.3 0-1-.7-1.2-3-2-1.5-.5-3-1.6-3-3.8 0-2.6 2.3-4.1 4.4-4.1 2 0 4.2 1.4 4.3 4.1H384z"/>
             </g>
             <path fill="none" d="M241.6 160.2v-1.4"/>
-            <g id="eNEEyF.tif_1_" fill="#F6F9EE">
+            <g fill="#F6F9EE">
               <path d="M70.7 123.2c-1.2 1.4-2.2 2.8-3.1 4.3-3.4 5.8-4.1 13-2.7 19.5 1 4.8 3.2 9.3 6.4 13 6.7 7.6 17 10.9 27 10.3 8.1-.4 15.3-3.3 22.6-6.3 6.7-2.8 13.9-.9 19.3 3.7.3.2.5.5.8.7 5.2 4.9 9.5 11.3 12 18 3.3 8.7 5 17.9 8.2 26.6 3.9 10.6 8.8 21.9 16.3 30.4 5.9 6.7 14.6 11.9 23.8 10.1 4-.8 7.5-2.6 10.9-4.7 12.1-7.8 16.4-22.9 13.5-36.5-1.3-6.2-3.8-11.9-6.8-17.4-3-5.5-6.7-10.5-10.4-15.4-3.4-4.6-6.9-9.3-10.2-14-4-5.8-8-11.6-11.9-17.4-6.4-9.7-12.7-19.9-17.2-30.7-2-4.8-4.2-9-7.7-12.9-4.7-5.2-10.8-9-17.6-10.9-5.9-1.6-11.9-1.7-17.9-.8-6.8 1-13.2 3.2-19.5 6-6.7 3.1-13.2 6.7-19.3 10.8-5.8 4-11.9 8.2-16.5 13.6z"/>
               <path d="M57.1 106.7c3.1 2.5 6.4 3.6 10.1 2.5 4-1.1 6.5-4.8 6-9-.3-3.3-1.9-5.9-4.5-7.9-2.1-1.6-4.5-2.4-7.1-2.3-3.6.1-6.9 2.4-7.9 5.9-1.2 4.4.4 7.9 3.4 10.8z"/>
               <path d="M94.4 93.6c1.8-2.3 2.2-5.1 1.4-8.2-1.2-4.4-5.1-7.8-9.7-8.4-5.7-.7-10.3 4-9.6 9.7.4 3 1.7 5.5 3.9 7.4 2.5 2.2 5.5 3.1 8.9 2.6 1.7-.3 3.6-1.5 5.1-3.1z"/>
