fixed relative sizing of 2nd protein svgs

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
       <!-- PART 2 PROTEIN -->
 
-      <div class="xs-1 l-1-2">
+      <div class="xs-1 l-1-2 protein gutter">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 351.3 222.4">
           <g id="part-2">
             <g id="peanut-butter">
