changed spacing for the 2nd protein and media query for resize ratio correction

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- INFOGRAPHIC START -->
 
   <main>
-    <div class="grid">
+    <div class="grid gutter">
       <div class="xs-1 l-1-2">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460.3 245">
           <g id="part-1">
@@ -274,7 +274,7 @@
 
       <!-- PART 2 PROTEIN -->
 
-      <div class="xs-1 l-1-2 protein gutter">
+      <div class="xs-1 l-1-2 protein">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 351.3 222.4">
           <g id="part-2">
             <g id="peanut-butter">
