--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <main>
     <div class="grid gutter">
-      <div class="xs-1 l-1-2">
+      <div class="xs-1 l-1-2 protein-1">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460.3 245">
           <g id="part-1">
             <g id="protein-bubble">
@@ -274,7 +274,7 @@
 
       <!-- PART 2 PROTEIN -->
 
-      <div class="xs-1 l-1-2 protein ">
+      <div class="xs-1 l-1-2 protein-2">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 351.3 222.4">
           <g id="part-2">
             <g id="peanut-butter">
