added background colours

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="grid gutter">
-      <div class="xs-1">
+      <div class="xs-1 push-2">
         <svg xmlns="http://www.w3.org/2000/svg" id="layer-1" viewBox="0 0 792 143">
           <g fill="#143736">
             <path d="M10.7 15.8h3l7.2 25.5h.1l7-25.5h2.7l7 25.5h.1L45 15.8h3l-8.4 29.3h-3.7l-6.5-24h-.1l-6.4 24h-3.8l-8.4-29.3z"/>
@@ -50,7 +50,7 @@
   <!-- INFOGRAPHIC START -->
 
   <main>
-    <div class="grid gutter">
+    <div class="grid gutter push-2 info-1">
       <div class="xs-1 l-1-2 protein-1">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460.3 245">
           <g id="part-1">
@@ -509,7 +509,7 @@
 
     <!-- IRON -->
     <div class="grid">
-      <div class="xs-1">
+      <div class="xs-1 l-1-2">
         <svg xmlns="http://www.w3.org/2000/svg" id="iron-graphic" viewBox="0 0 538 319">
           <g id="iron-man" fill="#143736">
             <circle cx="376.8" cy="47.8" r="11.9"/>
@@ -734,7 +734,7 @@
 
       <!-- PIE CHART -->
 
-      <div class="xs-1">
+      <div class="xs-1 l-1-2">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 398.5 259">
           <g id="footprint">
             <path fill="#ACD8AF" d="M14.5 63.4h141v131.1h-141z"/>
