resized top proteins to better fit responsive layout

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <header>
-    <div class="grid gutter">
-      <div class="xs-1 push-2">
+    <div class="grid gutter island">
+      <div class="xs-1 gutter-2">
         <svg xmlns="http://www.w3.org/2000/svg" id="layer-1" viewBox="0 0 792 143">
           <g fill="#143736">
             <path d="M10.7 15.8h3l7.2 25.5h.1l7-25.5h2.7l7 25.5h.1L45 15.8h3l-8.4 29.3h-3.7l-6.5-24h-.1l-6.4 24h-3.8l-8.4-29.3z"/>
@@ -50,7 +50,7 @@
   <!-- INFOGRAPHIC START -->
 
   <main>
-    <div class="grid gutter push-2 info-1">
+    <div class="grid gutter island push-2 info-1 top">
       <div class="xs-1 l-1-2 protein-1">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460.3 245">
           <g id="part-1">
