--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
     <!-- IRON -->
     <div class="grid">
-      <div class="xs-1 l-1-2">
+      <div class="xs-1 l-1-2 gutter-1-2 iron">
         <svg xmlns="http://www.w3.org/2000/svg" id="iron-graphic" viewBox="0 0 538 319">
           <g id="iron-man" fill="#143736">
             <circle cx="376.8" cy="47.8" r="11.9"/>
@@ -734,7 +734,7 @@
 
       <!-- PIE CHART -->
 
-      <div class="xs-1 l-1-2">
+      <div class="xs-1 l-1-2 gutter-1-2 carbon">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 398.5 259">
           <g id="footprint">
             <path fill="#ACD8AF" d="M14.5 63.4h141v131.1h-141z"/>
