--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="grid gutter island">
       <div class="xs-1 gutter-2">
-        <svg xmlns="http://www.w3.org/2000/svg" id="layer-1" viewBox="0 0 792 143">
+        <svg xmlns="http://www.w3.org/2000/svg" id="layer-1" width="792" height="143" viewBox="0 0 792 143">
           <g fill="#143736">
             <path d="M10.7 15.8h3l7.2 25.5h.1l7-25.5h2.7l7 25.5h.1L45 15.8h3l-8.4 29.3h-3.7l-6.5-24h-.1l-6.4 24h-3.8l-8.4-29.3z"/>
             <path d="M57.5 22.9c6.4 0 11.4 5.4 11.4 11.4 0 5.9-4.9 11.4-11.4 11.4-6.3 0-11.3-5.3-11.3-11.2 0-6.9 5.6-11.6 11.3-11.6zm0 20.2c4.2 0 8.5-3.3 8.5-9s-4.8-8.7-8.5-8.7c-4 0-8.5 3.2-8.5 9 0 5 4.1 8.7 8.5 8.7z"/>
@@ -52,7 +52,7 @@
   <main>
     <div class="grid gutter island push-2 info-1 top">
       <div class="xs-1 l-1-2 protein-1">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460.3 245">
+        <svg xmlns="http://www.w3.org/2000/svg" width"460.3" height="245" viewBox="0 0 460.3 245">
           <g id="part-1">
             <g id="protein-bubble">
               <path fill="#F6F9EE" d="M306 55.9C306 80.4 248.6 82 159 82S3.9 79.2 3.9 55.9c0-27.2 65.5-26 155.1-26s147 4.2 147 26z"/>
@@ -275,7 +275,7 @@
       <!-- PART 2 PROTEIN -->
 
       <div class="xs-1 l-1-2 protein-2">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 351.3 222.4">
+        <svg xmlns="http://www.w3.org/2000/svg" width="351.3" height="222.4" viewBox="0 0 351.3 222.4">
           <g id="part-2">
             <g id="peanut-butter">
               <circle cx="59.3" cy="155.2" r="39" fill="#F6F9EE"/>
@@ -510,7 +510,7 @@
     <!-- IRON -->
     <div class="grid">
       <div class="xs-1 l-1-2 gutter-1-2 iron push">
-        <svg xmlns="http://www.w3.org/2000/svg" id="iron-graphic" viewBox="0 0 538 319">
+        <svg xmlns="http://www.w3.org/2000/svg" id="iron-graphic" width="538" height="319" viewBox="0 0 538 319">
           <g id="iron-man" fill="#143736">
             <circle cx="376.8" cy="47.8" r="11.9"/>
             <path d="M403.6 111.8c0 2.9-2.3 5.2-5.2 5.2-2.9 0-5.2-2.3-5.2-5.2V80.5h-1.9v86.3c0 3.6-2.9 6.5-6.5 6.5s-6.5-2.9-6.5-6.5v-50.3H376v50.3c0 3.6-2.9 6.5-6.5 6.5s-6.5-2.9-6.5-6.5V80.5h-2.4v31.4c0 2.9-2.3 5.2-5.2 5.2-2.9 0-5.2-2.3-5.2-5.2v-36 .1c.3-2.7 1.3-5.1 2.8-7.1 2.3-3.2 5.9-5.4 10-5.9.6-.1 1.2-.1 1.9-.1h23.8l2.5.2c3.8.7 7.1 2.8 9.4 5.8 1.8 2.5 2.9 5.4 2.9 8.7v12.5l.1 21.7z"/>
@@ -735,7 +735,7 @@
       <!-- PIE CHART -->
 
       <div class="xs-1 l-1-2 gutter-1-2 carbon push">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 398.5 259">
+        <svg xmlns="http://www.w3.org/2000/svg" width="398.5" height="259" viewBox="0 0 398.5 259">
           <g id="footprint">
             <path fill="#ACD8AF" d="M14.5 63.4h141v131.1h-141z"/>
             <g fill="#006D53">
@@ -955,7 +955,7 @@
   <footer>
     <div class="grid">
       <div class="unit xs-1 grass">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2461 356.81">
+        <svg xmlns="http://www.w3.org/2000/svg" width="2461" height="356.81" viewBox="0 0 2461 356.81">
           <rect fill="#f7faee" x="0" y="-10" width="2461" height="360"/>
           <path fill="#ACD8AF" d="M2461 356.81V256.06c-4.12-15.42-8.1-34.05-12.89-69.23-19.49 39.78-21.85 90.58-36.13 111.99-11.29-18.21-19.97-76.78-27.81-87.48 3.07 24.91 5.83 52.07 3.97 66.07-20.29-14.29-41.08-79.25-47.05-93.25 9.55 32.31 10.09 107.76 4.79 115.46-15.19-.42-45.06-38.85-52.3-54.17-1.28 33.2 3.89 68.02 1.76 79.65-6.24-2.3-17.88-33.2-26.59-54.06 0 12.34-16.63 38.8-22.79 46.82-11.34-10.81-4.64-69.76-12.13-85.04l-20.04 64.74c-7.08-9.33-25.67-27.14-25.67-27.14s4.87 58.4 6.16 70.04l-24.99-86.3-22.18 54.99-37.73-35.11-2.35 37.78-71.63-55.5 21.17 76.25c-9.77-12.5-24.65-47.22-39.91-51.53-.89 12.65 5.14 39.9 4.25 52.55-7.94-3.41-56.8-87.05-56.8-87.05s9.75 46.48 14.76 70.53c.61 2.91-2.61 5.07-5.08 3.43-14.71-9.78-21.88-3.89-12.33-36.56-28.14 22.78-23.89 22.58-26.41-102.29l-52.15 125.51c-4.13-11.63-12.95-21.52-24.04-26.94l-18.88 45.87c-14.41-19.57 2.04-89.1 2.04-89.1s-13.27 40.34-43.63 55.25c-10.08-40.97-27.44-80.14-51.02-115.12 14.59 55.61 6.24 81.36 10.05 124.85-21.03-.75-20.33-15.89-21.51-49.28l-25.69 21.99-13.41-74.02c-36.95 23.14-65.79 58.95-80.53 99.98 6.67-51.93 1.04-105.4-16.3-154.81l-15.29 119.88-16.81-40.29-10.29 50.63c-3.41-21.39-10.16-42.24-19.92-61.57l-3.19 29.6c-32.83-71.4-61.23-159.53-81.36-235.5 19.66 88.23 30.09 192.81 27.55 283.17-10.28-20.17-26.76-37.12-46.63-47.97-1.11 20.51 2.26 41.25 9.82 60.36l-97.72-132.88c36.39 88.78 38.65 112.35 20.27 178.29-8.14-23.58-18.04-57.42-26.17-81-2.78 14.37-9.29 28.01-18.72 39.2L1292 260.89l-22.76 41.67-20.06-128.58-63.46 119.7-22.32-33.72-28.14 48.74-4.36-76.58c-17.31 27.65-39.07 52.51-64.17 73.33-3.04-14.69-.73-56.75-.73-56.75s-8.24 49.36-55.07 49.36c-14.74-21.23-19.77-38.75-17.18-70.49l-23.06 97-35.88-102.07-1.64 36.67c-23.35-60.9-13.59-11.58-34.61-85.19 9.23 77.31-.1 52.98-3.92 132.92l-22.19-34.5-7.25 58.29c-.48-33.85-10.06-67.53-27.47-96.56l-7.79 67.02-19.74-22.85-8.6 64.14c-2.23-24.94-13.37-48.99-30.96-66.82l-5.95 42.82c-6.38-55.9-16.97-68.95-32.18-123.12-14.09 35.75-19.89 32.5-16.27 70.75l-16.39-25.38c1.44 27.16-1.07 54.52-7.41 80.97-13.77-30.5-32.31-58.85-54.72-83.7l9.33 82.43-89.35-113.02c4.91 31.75 31.14 57.74 40.83 85.8-45.25-20.1-22.43-29.66-35.5 16.05-6.17-14.6-18.29-26.57-32.96-32.57l-18.89 51.18c-21.88-45.51-34.3-95.55-36.23-146.01l-59.83 128.84c-11.43-7.41-20.69-18.12-26.37-30.5l-15.83 47.03c-3.76-26.14-26.13-28.63-27.44-73.68-6.85 13.51-10.26 28.75-9.83 43.89l-40.44-135.53-.31 147.32c-1.39-11.04-4.67-27.62-13.39-34.52-3.18 11.33-8.95 28.83-12.13 40.16-12.32-14.27-24.8-41.09-29.81-59.27-.11 15.04 3.17 39.87 3.05 54.91-24.59-58.71-62.79-111.68-110.73-153.55 22.92 52.36 40.94 106.87 53.75 162.57-14.54-10.32-31-45.88-31-45.88s-4.61 40.75-10.51 49.2l-7.28-52.65-48.93 66.04c10.09-43.02 28.87-83.99 54.88-119.71-38.92 27.06-70.95 63.97-92.25 106.32 1.8-30.44-5.25-61.36-20.08-88.01l-11.74 74.3L3.14 91.04C2.1 98.19 1.05 105.33 0 112.47V356.8h2461z"/>
         </svg>
