--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main>
     <div class="grid gutter island push-2 info-1 top">
       <div class="xs-1 l-1-2 protein-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width"460.3" height="245" viewBox="0 0 460.3 245">
+        <svg xmlns="http://www.w3.org/2000/svg" width="460.3" height="245" viewBox="0 0 460.3 245">
           <g id="part-1">
             <g id="protein-bubble">
               <path fill="#F6F9EE" d="M306 55.9C306 80.4 248.6 82 159 82S3.9 79.2 3.9 55.9c0-27.2 65.5-26 155.1-26s147 4.2 147 26z"/>
