--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="grid gutter island">
       <div class="xs-1 gutter-2">
         <svg xmlns="http://www.w3.org/2000/svg" id="layer-1" width="792" height="143" viewBox="0 0 792 143">
+          <title>"Wondering About a Vegan Diet?"</title>
+          <desc>distress-effect looking title</desc>
           <g fill="#143736">
             <path d="M10.7 15.8h3l7.2 25.5h.1l7-25.5h2.7l7 25.5h.1L45 15.8h3l-8.4 29.3h-3.7l-6.5-24h-.1l-6.4 24h-3.8l-8.4-29.3z"/>
             <path d="M57.5 22.9c6.4 0 11.4 5.4 11.4 11.4 0 5.9-4.9 11.4-11.4 11.4-6.3 0-11.3-5.3-11.3-11.2 0-6.9 5.6-11.6 11.3-11.6zm0 20.2c4.2 0 8.5-3.3 8.5-9s-4.8-8.7-8.5-8.7c-4 0-8.5 3.2-8.5 9 0 5 4.1 8.7 8.5 8.7z"/>
@@ -53,6 +55,8 @@
     <div class="grid gutter island push-2 info-1 top">
       <div class="xs-1 l-1-2 protein-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="460.3" height="245" viewBox="0 0 460.3 245">
+          <title>Protein Sources for Vegans</title>
+          <desc>A visual list of great sources of protein for vegans, and the protein needs for 14–18 year olds</desc>
           <g id="part-1">
             <g id="protein-bubble">
               <path fill="#F6F9EE" d="M306 55.9C306 80.4 248.6 82 159 82S3.9 79.2 3.9 55.9c0-27.2 65.5-26 155.1-26s147 4.2 147 26z"/>
@@ -276,6 +280,8 @@
 
       <div class="xs-1 l-1-2 protein-2">
         <svg xmlns="http://www.w3.org/2000/svg" width="351.3" height="222.4" viewBox="0 0 351.3 222.4">
+          <title>Part 2 of Protein List</title>
+          <desc>A continuation of the visual list of protein sources</desc>
           <g id="part-2">
             <g id="peanut-butter">
               <circle cx="59.3" cy="155.2" r="39" fill="#F6F9EE"/>
@@ -511,6 +517,8 @@
     <div class="grid">
       <div class="xs-1 l-1-2 gutter-1-2 iron push">
         <svg xmlns="http://www.w3.org/2000/svg" id="iron-graphic" width="538" height="319" viewBox="0 0 538 319">
+          <title>Iron Sources for Vegans</title>
+          <desc>A visual list of places to get iron in your diet</desc>
           <g id="iron-man" fill="#143736">
             <circle cx="376.8" cy="47.8" r="11.9"/>
             <path d="M403.6 111.8c0 2.9-2.3 5.2-5.2 5.2-2.9 0-5.2-2.3-5.2-5.2V80.5h-1.9v86.3c0 3.6-2.9 6.5-6.5 6.5s-6.5-2.9-6.5-6.5v-50.3H376v50.3c0 3.6-2.9 6.5-6.5 6.5s-6.5-2.9-6.5-6.5V80.5h-2.4v31.4c0 2.9-2.3 5.2-5.2 5.2-2.9 0-5.2-2.3-5.2-5.2v-36 .1c.3-2.7 1.3-5.1 2.8-7.1 2.3-3.2 5.9-5.4 10-5.9.6-.1 1.2-.1 1.9-.1h23.8l2.5.2c3.8.7 7.1 2.8 9.4 5.8 1.8 2.5 2.9 5.4 2.9 8.7v12.5l.1 21.7z"/>
@@ -736,6 +744,8 @@
 
       <div class="xs-1 l-1-2 gutter-1-2 carbon push">
         <svg xmlns="http://www.w3.org/2000/svg" width="398.5" height="259" viewBox="0 0 398.5 259">
+          <title>Carbon Footprints of Various Diets</title>
+          <desc>A graph of the pounds of CO2-eq per day created by various diets</desc>
           <g id="footprint">
             <path fill="#ACD8AF" d="M14.5 63.4h141v131.1h-141z"/>
             <g fill="#006D53">
