added js file, added links

--- a/index.html
+++ b/index.html
@@ -972,5 +972,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.0.0-beta1.min.js"></script>
+  <script src="js/main.js"></script>
+
 </body>
 </html>
