starting animation on beans

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main>
     <div class="grid gutter island push-2 info-1 top">
       <div class="xs-1 l-1-2 protein-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width="460.3" height="245" viewBox="0 0 460.3 245">
+        <svg class="kids" xmlns="http://www.w3.org/2000/svg" width="460.3" height="245" viewBox="0 0 460.3 245">
           <title>Protein Sources for Vegans</title>
           <desc>A visual list of great sources of protein for vegans, and the protein needs for 14–18 year olds</desc>
           <g id="part-1">
@@ -279,7 +279,7 @@
       <!-- PART 2 PROTEIN -->
 
       <div class="xs-1 l-1-2 protein-2">
-        <svg xmlns="http://www.w3.org/2000/svg" width="351.3" height="222.4" viewBox="0 0 351.3 222.4">
+        <svg id="second-protein-list" class ="unit-xs-hidden" xmlns="http://www.w3.org/2000/svg" width="351.3" height="222.4" viewBox="0 0 351.3 222.4">
           <title>Part 2 of Protein List</title>
           <desc>A continuation of the visual list of protein sources</desc>
           <g id="part-2">
@@ -515,7 +515,7 @@
 
     <!-- IRON -->
     <div class="grid">
-      <div class="xs-1 l-1-2 gutter-1-2 iron push">
+      <div class="xs-1 l-1-2 gutter-1-2 iron push relative">
         <svg xmlns="http://www.w3.org/2000/svg" id="iron-graphic" width="538" height="319" viewBox="0 0 538 319">
           <title>Iron Sources for Vegans</title>
           <desc>A visual list of places to get iron in your diet</desc>
@@ -597,7 +597,7 @@
               <path d="M297.6 49.4h-2.2V37.5h2.2v11.9zm0 3.9h-2.2v-2.6h2.2v2.6z"/>
             </g>
           </g>
-          <g id="kidney-beans">
+          <g id="kidney-beans" class="bean">
             <g>
               <path fill="#143736" d="M179.6 250.5c-3.3-.1-6.6-.4-9.7-1.5-4.5-1.6-7.9-4.5-10.2-8.6-2.9-5-3.3-10.3-1.4-15.8 1.7-4.8 4.9-8.4 9.5-10.7 3-1.5 6.2-1.9 9.5-2 5-.2 9.4-2.1 12.9-5.8 2.1-2.2 3.5-4.8 4.6-7.7 1.9-5.2 5.5-8.9 10.6-11 5.2-2.1 10.4-1.9 15.5.5 7.3 3.4 11.4 11.1 10.8 18.8-.3 3.6-1.3 7-2.6 10.3-1.4 3.4-3.1 6.6-5.1 9.6-2.4 3.6-5.3 6.8-8.5 9.8-3.4 3.1-7.2 5.7-11.2 7.8-6.1 3.2-12.6 5.2-19.4 5.9-1.9.2-3.6.3-5.3.4zm-2.5-30.2c0 .1 0 .1 0 0 .6 0 1.1 0 1.7-.1 3.3-.2 6.4-.9 9.4-2.3 3-1.3 5.7-3.2 8-5.7 2.3-2.6 4.1-5.4 5.3-8.7.3-.7-.1-1.5-.8-1.8-.7-.3-1.6 0-1.9.7-.2.3-.3.7-.5 1-1.3 3-3 5.6-5.4 7.8-3.5 3.1-7.5 5-12.1 5.6-1.6.2-3.2.2-4.8.4-.8.1-1.4.8-1.3 1.6 0 .8.7 1.4 1.5 1.5.1.1.5 0 .9 0z"/>
               <path fill="#006D53" d="M176 220.5c10.5.9 23.3-6.6 26.1-17.2.6-2.3-3.5-3.1-4.3-1.1-2.8 7.8-13 14.5-22.1 14.6-2.1.1-2.4 3.5.3 3.7z"/>
@@ -623,7 +623,7 @@
               <path d="M229.4 259.4c-.1-.4-.4-.5-.5-.5-.3 0-.5.2-.5.5s.2.4.9.6c.7.2 1.5.5 1.5 1.6 0 1.2-1 1.9-1.9 1.9-.5 0-1.2-.2-1.6-.7-.3-.4-.4-.8-.4-1.2h1.3c.1.2.2.7.7.7.4 0 .6-.3.6-.5 0-.4-.3-.5-1.2-.8-.6-.2-1.2-.7-1.2-1.5 0-1 .9-1.7 1.8-1.7.8 0 1.7.6 1.7 1.6h-1.2z"/>
             </g>
           </g>
-          <g id="swiss-chard">
+          <g id="swiss-chard" class="bean">
             <g>
               <path fill="#143736" d="M207.3 164.1c-7.4 0-14.5-1.5-21.3-4.4-4-1.7-7.7-3.8-10.7-7.1-2.7-3-4.2-6.6-4.7-10.6-1-8 3.5-16.6 12.1-19.9 5.1-2 10.3-1.8 15.3.7 2.8 1.4 5.7 2.1 8.8 2.1 5.1-.1 9.6-1.8 13.3-5.5 7.2-7.3 19-7.6 26.5-.8 7.2 6.6 8.3 17.5 2.6 25.4-4 5.5-9.1 9.6-14.9 13-6.5 3.7-13.5 5.9-21 6.8-2.1.1-4.1.2-6 .3zm-.6-30.6c5.7-.1 10.3-1.6 14.5-4.5 1-.7 2-1.5 3-2.4.7-.7.7-1.5.1-2.2-.5-.6-1.4-.6-2.1-.1-.3.2-.7.5-1 .8-3 2.5-6.4 4.2-10.2 4.9-4.2.7-8.2.3-12.2-1.2-1.1-.4-2.2-1-3.3-1.4-.9-.4-1.8 0-2.1.8-.3.9-.1 1.5.8 2 4.1 2.2 8.5 3.3 12.5 3.3z"/>
               <path fill="#006D53" d="M194 130.5c9.1 5.3 23.9 3.9 30.9-4.5 1.5-1.8-1.9-4.3-3.4-2.8-5.8 5.8-17.9 7.6-26.2 3.9-2-.9-3.6 2-1.3 3.4z"/>
@@ -648,7 +648,7 @@
               <path d="M258.5 174.7h-1.2v-.7c-.2.4-.8.8-1.7.8-1.4 0-2.7-1.1-2.7-2.8 0-1.8 1.4-2.9 2.7-2.9.8 0 1.2.3 1.6.7v-2.3h1.3v7.2zm-2.8-1c1 0 1.6-.9 1.6-1.7 0-.9-.7-1.7-1.6-1.7-1 0-1.6.9-1.6 1.6 0 1.1.8 1.8 1.6 1.8z"/>
             </g>
           </g>
-          <g id="lima-beans">
+          <g id="lima-beans" class="bean">
             <path fill="#143736" d="M445.8 143.1c0 5.3-1.7 9.9-5.4 13.8-3.2 3.4-7 6.1-11.1 8.3-6.3 3.5-13.1 5.4-20.2 6.1-4.1.4-8.2.3-12.3-.2-7.6-1-14.7-3.5-21.2-7.5-4.2-2.6-7.9-5.7-10.4-10.1-1.1-2.1-1.8-4.3-2-6.6-.7-6.9 1.7-12.5 7-17 3.1-2.6 6.7-3.9 10.8-4.2 4.7-.3 8.8 1.1 12.7 3.7 3.4 2.3 7.3 3.2 11.5 2.8 3.9-.3 7.3-1.8 10.5-4.1 4.3-3.2 9.2-4.2 14.5-3.3 4.8.9 8.7 3.2 11.7 7 2.5 3.6 3.8 7.1 3.9 11.3zm-43.7-2.1c6.3 0 11-1.4 15.1-3.9.4-.3.9-.6 1.2-1 .5-.6.6-1.2.2-1.9-.5-.7-1.1-.8-1.8-.5-.4.1-.7.4-1 .6-2.5 1.8-5.4 2.9-8.4 3.4-4.9.8-9.7.1-14.2-2.4-1.1-.6-2.2-1.2-3.2-1.9-1-.6-1.9-.5-2.4.3s-.3 1.6.7 2.3c1.5.9 3 1.7 4.5 2.5 3.2 1.7 6.9 2.4 9.3 2.5z"/>
             <path fill="#006D53" d="M387.9 136c8 6.8 22.4 7.4 30.8.5 1.8-1.5-.7-3.9-2.4-2.7-6.8 4.7-19 4.3-26.5-.9-1.8-1.3-4 1.3-1.9 3.1z"/>
             <g fill="#F6F9EE">
@@ -670,7 +670,7 @@
               <path d="M410.8 118c-.1-.4-.4-.5-.5-.5-.3 0-.5.2-.5.5s.2.4.9.6c.7.2 1.5.5 1.5 1.6 0 1.2-1 1.9-1.9 1.9-.5 0-1.2-.2-1.6-.7-.3-.4-.4-.8-.4-1.2h1.3c.1.2.2.7.7.7.4 0 .6-.3.6-.5 0-.4-.3-.5-1.2-.8-.6-.2-1.2-.7-1.2-1.5 0-1 .9-1.7 1.8-1.7.8 0 1.7.6 1.7 1.6h-1.2z"/>
             </g>
           </g>
-          <g id="chickpeas">
+          <g id="chickpeas" class="bean">
             <g>
               <path fill="#143736" d="M294.4 149.3c-3.3-.1-6.6-.4-9.7-1.5-4.5-1.6-7.9-4.5-10.2-8.6-2.9-5-3.3-10.3-1.4-15.8 1.7-4.8 4.9-8.4 9.5-10.7 3-1.5 6.2-1.9 9.5-2 5-.2 9.4-2.1 12.9-5.8 2.1-2.2 3.5-4.8 4.6-7.7 1.9-5.2 5.5-8.9 10.6-11 5.2-2.1 10.4-1.9 15.5.5 7.3 3.4 11.4 11.1 10.8 18.8-.3 3.6-1.3 7-2.6 10.3-1.4 3.4-3.1 6.6-5.1 9.6-2.4 3.6-5.3 6.8-8.5 9.8-3.4 3.1-7.2 5.7-11.2 7.8-6.1 3.2-12.6 5.2-19.4 5.9-1.9.3-3.6.3-5.3.4zm-2.5-30.1c.6 0 1.1 0 1.7-.1 3.3-.2 6.4-.9 9.4-2.3 3-1.3 5.7-3.2 8-5.7 2.3-2.6 4.1-5.4 5.3-8.7.3-.7-.1-1.5-.8-1.8-.7-.3-1.6 0-1.9.7-.2.3-.3.7-.5 1-1.3 3-3 5.6-5.4 7.8-3.5 3.1-7.5 5-12.1 5.6-1.6.2-3.2.2-4.8.4-.8.1-1.4.8-1.3 1.6 0 .8.7 1.4 1.5 1.5h.9z"/>
               <path fill="#006D53" d="M291.1 119.6c10.5.9 23.2-6.7 26.1-17.3.6-2.3-3.6-3.1-4.3-1.1-2.8 7.8-12.9 14.6-22 14.7-2.3.1-2.5 3.5.2 3.7z"/>
@@ -694,7 +694,7 @@
               <path d="M338 157c-.1-.4-.4-.5-.5-.5-.3 0-.5.2-.5.5s.2.4.9.6c.7.2 1.5.5 1.5 1.6 0 1.2-1 1.9-1.9 1.9-.5 0-1.2-.2-1.6-.7-.3-.4-.4-.8-.4-1.2h1.3c.1.2.2.7.7.7.4 0 .6-.3.6-.5 0-.4-.3-.5-1.2-.8-.6-.2-1.2-.7-1.2-1.5 0-1 .9-1.7 1.8-1.7.8 0 1.7.6 1.7 1.6H338z"/>
             </g>
           </g>
-          <g id="soybeans">
+          <g id="soybeans" class="bean">
             <g>
               <path fill="#143736" d="M110.5 238.2c-4.9-.1-9.7-.7-14.5-2-4.2-1.2-8.2-2.8-12-4.9-3.8-2.1-7.3-4.6-10.1-8-2.4-2.8-3.7-6.1-4.1-9.8-.7-5.4.9-10.1 4.2-14.3 1.7-2.2 3.9-4 6.5-5.1 6.7-2.9 13.2-2.5 19.4 1.7 4.3 2.9 9.1 3.7 14.1 2.7 2.7-.5 5.3-1.6 7.6-3.4 3.1-2.5 6.8-3.9 10.9-4 5.9-.2 10.8 1.8 14.8 6 3.2 3.3 4.8 7.3 5.1 11.9.3 4.6-.9 8.6-3.6 12.3-2.3 3.1-5.1 5.6-8.3 7.7-3.6 2.5-7.5 4.3-11.5 5.9-4.7 1.8-9.5 2.8-14.5 3.1-1.3 0-2.7.1-4 .2zm.6-30.7c2.2.2 4.4-.6 6.7-1.2 2.5-.7 4.7-2 6.9-3.4.9-.6 1.1-1.4.6-2.1-.5-.8-1.3-.9-2.3-.5-.3.2-.6.3-.8.5-3 1.9-6.3 3.3-9.9 3.5-5.4.4-10.4-.8-14.9-3.9-.5-.3-1.1-.6-1.7-.9-.8-.3-1.6.1-1.9.8-.3.7-.1 1.5.7 1.9.3.1.5.3.8.5 4.7 3.3 9.8 4.9 15.8 4.8z"/>
               <path fill="#006D53" d="M94.1 202.7c8.2 6.7 22.9 7.2 31.4.2 1.9-1.5-.7-3.9-2.4-2.7-6.9 4.8-19.3 4.5-27.1-.6-1.9-1.2-4 1.4-1.9 3.1z"/>
@@ -717,7 +717,7 @@
               <path d="M128.1 245.2c-.1-.4-.4-.5-.5-.5-.3 0-.5.2-.5.5s.2.4.9.6c.7.2 1.5.5 1.5 1.6 0 1.2-1 1.9-1.9 1.9-.5 0-1.2-.2-1.6-.7-.3-.4-.4-.8-.4-1.2h1.3c.1.2.2.7.7.7.4 0 .6-.3.6-.5 0-.4-.3-.5-1.2-.8-.6-.2-1.2-.7-1.2-1.5 0-1 .9-1.7 1.8-1.7.8 0 1.7.6 1.7 1.6h-1.2z"/>
             </g>
           </g>
-          <g id="lentils-1">
+          <g id="lentils-1" class="bean">
             <path fill="#143736" d="M497.4 246.1c-7.9-.1-16.3-2.1-24.2-6.1-5.2-2.7-9.8-6.1-13.9-10.3-4.4-4.5-7.9-9.6-10.3-15.4-2.7-6.7-2.1-13.2 2-19.1 2.9-4.2 7.1-6.6 12.1-7.6 4.4-.8 8.5-.1 12.4 2 3.5 1.9 6.1 4.7 8 8.2 3.5 6.4 11.6 10.4 18.8 9.2 2.8-.5 5.6-.7 8.3-.1 6.2 1.4 10.7 4.9 13.4 10.7 2.3 4.8 2.5 9.8.6 14.8-1.9 4.9-5.2 8.5-10.1 10.7-5.1 2.3-10.6 2.9-17.1 3zm1.7-30.6c.8-.1 2.1-.1 3.4-.3.9-.1 1.4-.8 1.4-1.6s-.7-1.4-1.6-1.4c-.4 0-.8.1-1.2.1-8.1.7-14.6-2.2-19.7-8.5-1.1-1.3-1.9-2.8-2.8-4.2-.5-.8-1.4-1.1-2.1-.7-.8.4-1 1.2-.6 2.1.1.3.3.5.4.8 2.1 3.7 4.8 6.8 8.3 9.3 4.1 3 8.9 4.4 14.5 4.4z"/>
             <path fill="#006D53" d="M475.6 201.4c4.3 9.6 16.5 16.4 27.1 13.8 2.3-.6 1.5-4-.5-3.6-8.2 1.3-19-4.2-23.5-12.1-1.2-2-4.2-.6-3.1 1.9z"/>
             <g fill="#143736">
@@ -740,7 +740,7 @@
         </svg>
       </div>
 
-      <!-- PIE CHART -->
+      <!-- FOOTPRINT CHART -->
 
       <div class="xs-1 l-1-2 gutter-1-2 carbon push">
         <svg xmlns="http://www.w3.org/2000/svg" width="398.5" height="259" viewBox="0 0 398.5 259">
